# twitch

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
app/: __init__.py  main.py
app/api/: deps.py
app/core/: config.py  security.py
app/domain/auth/: router.py  service.py
app/domain/billing/: router.py  service.py
app/domain/bot/: models.py  router.py  schemas.py  service.py
app/domain/clips/: models.py  router.py  schemas.py  service.py
app/domain/crm/: models.py  router.py  schemas.py  service.py
app/frontend/panel/: app.js  index.html  styles.css
app/workers/: clip_worker.py
docs/: CHECKLIST_LANCAMENTO_7_DIAS.md  PROJECT_OBJECTIVES.md  RESPONSIBILITIES.md
public/: dashboard.html  dashboard.js  index.html  styles.css
src/: auth.ts  billing.ts  bot.ts  clipEngine.ts  config.ts  crm.ts  database.ts  index.ts  queue.ts  shims.d.ts  store.ts  twitchAuth.ts  types.ts
tests/: clipEngine.test.ts  crm.test.ts
tests_py/: test_authz_guards.py  test_billing_webhook.py  test_clip_logic.py  test_config_validation.py  test_objectives.py
